@@ -114,6 +114,11 @@ New in spot 2.8.7.dev (not yet released)
   - The twa_graph::is_alternating() and digraph::is_alternating() methods,
     deprecated in Spot 2.3.1 (2017-02-20), have been removed.
 
+  Bugs fixed:
+
+  - Relabeling automata could introduce false edges.  Those are now
+    removed.
+
 New in spot 2.8.7 (2020-03-13)
 
   Bugs fixed:
